# oraclewatch

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py  models.py
src/notifiers/: base.py  console.py  discord.py  telegram.py  telegram_bot.py
src/pollers/: base.py  kalshi.py  polymarket.py
src/storage/: sqlite.py
src/web/: app.py
src/web/static/: style.css
src/web/templates/: index.html
